# flix-scripts

./: .gitignore  .pre-commit-config.yaml  README.md
.github/workflows/: pr-checker.yml
.github/workflows/setup/: action.yml
blender/: blender-live-import.py
client_plugins/: README.md
client_plugins/default_hostname_setter/: main.js  manifest.json
client_plugins/version_up_away/: main.js  manifest.json
clipboard/: clipboard.py
dialogue_relink/: README.md  flix.py  main.py  requirements.txt
flixpy/: .gitignore  Makefile  README.md  pyproject.toml
flixpy/examples/: pyproject.toml  revision_a_panel.py  shotgrid_create_show.py  shotgrid_version_sequence.py  showgrid_create_show.py  update_sequence_metadata.py  webhook_add.py  webhook_server.py
flixpy/flix/: __init__.py  __main__.py
flixpy/flix/cli/: __init__.py  interactive_client.py  main.py
flixpy/flix/extension/: __init__.py  client.py  extension_api.yaml  extension_api_config.yaml  types.py
flixpy/flix/extension/extension_api/: __init__.py
flixpy/flix/extension/extension_api/api/api_registration/: registration_controller_get_all.py  registration_controller_register_client.py  registration_controller_unregister_client.py
flixpy/flix/extension/extension_api/api/health_check/: health_check_controller_health_check.py
flixpy/flix/extension/extension_api/api/info/: info_controller_get.py
flixpy/flix/extension/extension_api/api/media_object_download/: download_controller_download_media_object.py
flixpy/flix/extension/extension_api/api/panel_management/: panel_controller_annotate.py  panel_controller_create.py  panel_controller_update.py
flixpy/flix/extension/extension_api/api/preferences/: preferences_controller_lookup_preferences.py  preferences_controller_post.py
flixpy/flix/extension/extension_api/api/project_details/: project_controller_get.py
flixpy/flix/extension/extension_api/api/status/: status_controller_get.py
flixpy/flix/extension/extension_api/models/: __init__.py  action_event.py  action_state.py  action_type.py  actions_in_progress.py  actions_in_progress_response.py  asset_type.py  bulk_panel_annotate_request.py  bulk_panel_request.py  client_event_type.py  download_request.py  download_request_asset_type.py  download_response.py  episode_details_dto.py  event_subscribe_data.py  event_type.py  extension_open_file_data.py  extension_open_file_panel_data.py  extension_source_file_data.py  full_panel_annotate_request.py  full_panel_request.py  info_response.py  open_event.py  open_file_event.py  open_file_panel_data.py  open_source_file_data.py  open_source_file_event.py  panel_request.py  panel_request_item.py  panel_request_response.py  panel_request_source_file.py  panel_selection_response.py  ping_event.py  preferences_controller_lookup_preferences_response_200.py  preferences_controller_post_response_200.py  project_details_dto.py  project_ids.py  project_ids_dto.py  ps_configuration.py  registration_details.py  (+35 more)
flixpy/flix/extension/extension_api_templates/: str_enum.py.jinja
flixpy/flix/lib/: __init__.py  _utils.py  client.py  errors.py  forms.py  models.py  signing.py  transfers.py  types.py  utils.py  webhooks.py  websocket.py
flixpy/flix/lib/proto/: transfer.proto  transfer_pb2.py  transfer_pb2.pyi  transfer_pb2_grpc.py  transfer_pb2_grpc.pyi
flixpy/stubs/socketio/: __init__.pyi
flixpy/stubs/socketio-stubs/: __init__.pyi
hiero/: README.md  flix.py  flix_ui.py  hiero.py  hiero_c.py  hiero_production_handoff.py  hiero_ui.py  main.py
hiero/docs/: flix.html  flix_ui.html  hiero_c.html  hiero_ui.html  main.html
license_management/: README.md  flix.py  main.py  requirements.txt
maya/: README.md  maya-live-import.py
move_shows/: .gitignore  README.md  requirements.txt
move_shows/src/: main.py
panels_media_object/: README.md  flix.py  main.py
panels_media_pbject/: README.md  flix.py  main.py
pdf/: README.md  flix.py  flix_ui.py  generate_resources.sh  main.py  pdf.py  pdf_ui.py  requirements.txt  resources.py  resources.qrc
pdf/docs/: flix.html  flix_ui.html  main.html  pdf.html  pdf_ui.html
pdf/icons/: flix-contact-sheet.icns
shotgun/: README.md  flix.py  flix_ui.py  main.py  requirements.txt  shotgun.py  shotgun_ui.py
shotgun/docs/: flix.html  flix_ui.html  main.html  shotgun.html  shotgun_ui.html
