[tool.poetry]
name = "flix-sdk"
version = "1.1.0"
description = "Python SDK and command-line utilities for Flix"
authors = []
homepage = "https://www.foundry.com/products/flix"
repository = "https://github.com/TheFoundryVisionmongers/flix-scripts/tree/master/flixpy"
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "flix"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
aiohttp = "^3.8.5"
appdirs = "^1.4.4"
python-dateutil = "^2.8.2"
asyncclick = "^8.1.3.4"
anyio = "^3.7.1"
grpcio = "^1.57.0"
protobuf = "^4.24.1"
cryptography = "^41.0.3"
httpx = "^0.24.1"
attrs = "^23.1.0"
python-socketio = "^5.9.0"

[tool.poetry.scripts]
flix = 'flix.cli.main:main'

[tool.poetry.group.dev.dependencies]
types-python-dateutil = "^2.8.19.14"
types-appdirs = "^1.4.3.5"
grpcio-tools = "^1.57.0"
grpc-stubs = {git = "https://github.com/shabbyrobe/grpc-stubs.git"}
types-protobuf = "^4.24.0.1"
mypy-protobuf = "^3.5.0"
mypy = "^1.5.1"
openapi-python-client = "^0.15.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true
python_version = "3.10"

[tool.black]
line-length = 120
